<resources>
    <string name="app_name">Enqath</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Emergency Contacts</string>
    <string name="ar">arabic</string>


    <string-array name="Contacts">
        <item>   <string name="contact1">1</string>   </item>
        <item><string name="contact2">2</string></item>
        <item><string name="contact3">3</string></item>
        <item><string name="contact4">4</string></item>
        <item><string name="contact5">5</string></item>


    </string-array>
    <string-array name="ContactsValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="BloodTypes">
        <item>A+</item>
        <item>A-</item>
        <item>AB</item>
        <item>AB-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>

    </string-array>
    <string-array name="BloodValues">
        <item>A+</item>
        <item>A-</item>
        <item>AB</item>
        <item>AB-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>

    </string-array>


    <string name="about">About</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_drawer">Enqath</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_login">Enqath</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (minimum 6 characters) </string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions.</string>
    <string name="Enqath">Enqath</string>
    <string name="settings">Emergency Contacts</string>
    <string name="logout">Logout</string>
    <string name="level1">Minor: No injuries</string>
    <string name="level2">Medium: Minor Injuries</string>
    <string name="level3">Serious: Severe Injuries</string>
    <string name="accidentMsg">Choose Incident Severity</string>
    <string name="Skip">skip (dev only)</string>
    <string name="errorMsg">Field Required</string>
    <string name="title_activity_main_login">Enqath</string>
    <string name="action_sign_up">Register</string>
    <string name="title_activity_quick_registration">Registration</string>
    <string name="action_reg">Submit</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nationality">Nationality</string>
    <string name="bloodType">Blood Type</string>
    <string name="confirmPass">Confrim Password</string>
    <string name="nationalID">National ID</string>
    <string name="DOB">Date of Birth</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="signUp">Sign Up</string>
    <string name="communications">Communications</string>
    <string name="preferences">Emergency Contacts</string>
    <string name="phone1">Phone 1:</string>
    <string name="phone2">Phone 2:</string>
    <string name="phone3">Phone 3:</string>
    <string name="phone4">Phone 4:</string>
    <string name="phone5">Phone 5:</string>
    <string name="emergencyContacts">Your emergency contacts will be notified by SMS in case of an emergency or incident report</string>


    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="thirdPage">Medical ID</string>
    <string name="secondPage">Profile</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="updateProfile">Update</string>
    <string name="large_text">
      \n\n
        © Enqath 2016 \n\n

        An application that was made with the intention of making the UAE a better place. \n
        The application aims to ease the incident reporting methods and makes it as accurate as possible.\n\n

        Found a bug?\n Please help us fix it by sending us feedback (use the mail button on top).\n\n

        By using this application, you agree to our terms and services.

        This app uses the following open-source libraries:\n\n

       <b>DroidParts</b> \n (https://github.com/yanchenko/droidparts/tree/develop)\n\n
        ---------------------------------------------------------\n
        Copyright 2016 Alex Yanchenko\n
        Licensed under the Apache License, Version 2.0 (the "License");\n
        ou may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at\n
        http://www.apache.org/licenses/LICENSE-2.0\n
        Unless required by applicable law or agreed to in writing, software\n
        distributed under the License is distributed on an "AS IS" BASIS,\n
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
        See the License for the specific language governing permissions and\n
        limitations under the License.\n
        ---------------------------------------------------------\n\n

        <b>Sweet Alert Dialog</b> \n https://github.com/pedant/sweet-alert-dialog \n\n
        ---------------------------------------------------------\n
        The MIT License (MIT)\n\n

        Copyright © 2014 Pedant(http://pedant.cn)\n\n

        Permission is hereby granted, free of charge, to any person obtaining a copy\n
        of this software and associated documentation files (the "Software"), to deal\n
        in the Software without restriction, including without limitation the rights\n
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n
        copies of the Software, and to permit persons to whom the Software is\n
        furnished to do so, subject to the following conditions:\n

        The above copyright notice and this permission notice shall be included in all\n
        copies or substantial portions of the Software.\n\n

        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n
        SOFTWARE.\n
        ---------------------------------------------------------\n\n

         <b>SearchableSpinner</b> \n https://github.com/miteshpithadiya/SearchableSpinner \n\n
        Copyright 2015-2016 Mitesh Pithadiya

         Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.\n
         ---------------------------------------------------------\n\n
        <b>TourGuide</b> \n https://github.com/miteshpithadiya/SearchableSpinner \n\n
        The MIT License (MIT)

    Copyright © 2016 Tan Jun Rong

    Permission is hereby granted, free of charge, to any person obtaining a copy
    of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
            ---------------------------------------------------------\n\n

    </string>
    <string name="title_activity_preferences">Emergency Contacts</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_user_login">UserLogin</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="NationalID">National ID</string>
    <string name="Nationality">Nationality</string>
    <string name="dob">Date of Birth</string>


    <string name="primaryContact">Primary Contact</string>

    <string name="currentCondition">Current Condition</string>
    <string name="meds">Medications</string>
    <string name="allergies">Allergies</string>
    <string name="eInfo">Extra Information</string>

    <string name="Alias">Alias/Display Name</string>

    <string name="tooltip_title1">Extra Information</string>
    <string name="tooltip_title2">Extra Information</string>
    <string name="tooltip_desc1">Extra Information</string>
    <string name="tooltip_desc2">Extra Information</string>
    <string name="extrainfo">Extra Info.</string>
    <string name="userprofiletitle">User Profile</string>
    <string name="apptitle">Enqath</string>
    <string name="medidtitle">Medical ID</string>


</resources>
