<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_secpage"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/secondPage" />
        <item
            android:id="@+id/nav_thirdpage"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/thirdPage" />
    </group>

    <item android:title="@string/communications">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
