<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:layout_marginTop="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/accidentMsg"
        android:id="@+id/textView9"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.18"
        android:textSize="25dp"
        android:textIsSelectable="false"
        android:textStyle="bold" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/level1"
        android:id="@+id/btnMinorF"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.18" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/level2"
        android:id="@+id/btnMedF"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.18" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/level3"
        android:id="@+id/btnSeriousF"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.18" />
</LinearLayout>