<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="enqath.alhussein.enqath.MainLogin"
    tools:showIn="@layout/activity_main_login">


        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="48dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp">

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="48dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp">

        </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/password"
        android:layout_width="264dp"
        android:layout_height="37dp"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        tools:layout_editor_absoluteY="202dp"
        tools:layout_editor_absoluteX="46dp" />

    <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            tools:layout_editor_absoluteY="350dp"
            tools:layout_editor_absoluteX="45dp" />

        <Button
            android:id="@+id/email_sign_up_button"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_up"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            tools:layout_editor_absoluteY="406dp"
            tools:layout_editor_absoluteX="45dp" />

    <ImageView
            android:layout_width="352dp"
            android:layout_height="100dp"
            android:id="@+id/imageView3"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/fire"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:layout_width="336dp"
            android:layout_height="28dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Enqath"
            android:id="@+id/textView22"
            android:layout_gravity="center_horizontal"
            tools:layout_editor_absoluteY="116dp"
            tools:layout_editor_absoluteX="8dp"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:fontFamily="sans-serif" />

        <Button
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:text="@string/Skip"
            android:id="@+id/skiplogin"
            android:layout_gravity="center_horizontal"
            tools:layout_editor_absoluteY="271dp"
            tools:layout_editor_absoluteX="252dp" />


    <AutoCompleteTextView
        android:id="@+id/email"
        android:layout_width="264dp"
        android:layout_height="36dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        tools:layout_editor_absoluteY="158dp"
        tools:layout_editor_absoluteX="46dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/gsign_in_button"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        tools:layout_editor_absoluteY="350dp"
        tools:layout_editor_absoluteX="162dp" />


</android.support.constraint.ConstraintLayout>
