<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="13dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/fName"
                android:id="@+id/textView2"
                android:paddingRight="15dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txt_fname"
                android:layout_weight="1"
                android:hint=""
                android:background="#FFFFFF"
                android:textColor="@color/bright_foreground_material_light" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lName"
                android:id="@+id/textView12"
                android:paddingRight="15dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txt_lname"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:textColor="@color/bright_foreground_material_light" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/email"
                android:id="@+id/textView19"
                android:paddingRight="15dp"
                android:visibility="gone" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText11"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:textColor="@color/bright_foreground_material_light"
                android:visibility="gone" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/password"
                android:id="@+id/textView28"
                android:paddingRight="15dp"
                android:visibility="gone" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText12"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:textColor="@color/bright_foreground_material_light"
                android:visibility="gone" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/confirmPass"
                android:id="@+id/textView29"
                android:paddingRight="15dp"
                android:visibility="gone" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText13"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:textColor="@color/bright_foreground_material_light"
                android:visibility="gone" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/phoneNumber"
                android:id="@+id/textView30"
                android:paddingRight="15dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/txt_phone"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:hint="+9715xxxxxxxx"
                android:textColor="@color/bright_foreground_material_light" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/nationalID"
                android:id="@+id/textView31"
                android:paddingRight="15dp" />

            <EditText
                android:layout_width="254dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_nID"
                android:background="#FFFFFF"
                android:paddingLeft="15dp"
                android:textColor="@color/bright_foreground_material_light" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/DOB"
                android:id="@+id/DOBBBBBBBBB"
                android:paddingRight="15dp"
                android:inputType="date"
                android:layout_weight="1" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtDob"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/nationality"
                android:id="@+id/textView33"
                android:paddingRight="15dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/country" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/bloodType"
                android:id="@+id/textView34"
                android:visibility="gone" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:id="@+id/spinner_blood"
                android:visibility="gone" />
        </TableRow>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updateProfile"
            android:id="@+id/btnSubmit"
            android:gravity="center|center_horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:enabled="true"
            android:visibility="gone" />
    </LinearLayout>
</RelativeLayout>